Fixed auogeneration of staff title

--- a/staff.html
+++ b/staff.html
@@ -10,7 +10,7 @@ title: Staff
         </div>
         <div class="description">
 
-            <h3><a href="{{ staff.url }}">{{ staff.name }}</a></h3>
+            <h3><a href="{{ staff.url }}">{{ staff.displayname }}</a></h3>
             <p>{{ staff.position }}</p>
             <p>{{ staff.content | markdownify }}</p>
         </div>
