--- a/index.html
+++ b/index.html
@@ -2,3 +2,16 @@
 layout: base
 title: Times New Roman
 ---
+
+<h2>Recent posts</h2>
+
+{% for post in site.posts limit:2 %}
+    <div class="recentpost">
+        <h3><a href="{{post.url}}">{{ post.title }}</a></h3>
+
+        <p>
+            {{ post.excerpt | markdownify }}
+        </p>
+    </div>
+{% endfor %}
+    
