Added profile picture to staff page

--- a/staff.html
+++ b/staff.html
@@ -6,7 +6,7 @@ title: Staff
     {% for staff in site.staff %}
     <div class="picturelistitem">
         <div class="picture">
-
+            <img class="profilepicture" src="{{ staff.image }}" />
         </div>
         <div class="description">
 
