--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Times New Roman
 <h2>View our most recent issue, <a href="{{recentissue.url}}">{{ recentissue.title }}</a></h2>
 
 <a href="{{recentissue.url}}">
-    <img class="issuepicture" src="{{recentissue.image}}">
+    {% include issuepdforimage.html issue=recentissue %}
 </a>
 
 <hr>
