--- a/videos.html
+++ b/videos.html
@@ -3,12 +3,17 @@ title: Videos
 ---
 
 {% for vid in site.data.videos %}
+  <div class="video-container">
+ 
   <h2>{{vid.title}}</h2>
   {% if forloop.index <= 3 %}
-    <iframe src="https://www.youtube.com/embed/{{vid.ytid}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="video-embed-container">
+      <iframe class="video-embed" src="https://www.youtube.com/embed/{{vid.ytid}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
   {% else %}
     <a href="https://www.youtube.com/watch?v={{vid.ytid}}">
-        <img width="100%" src="https://img.youtube.com/vi/{{vid.ytid}}/sddefault.jpg">
+        <img class="video-thumbnail" width="100%" src="https://img.youtube.com/vi/{{vid.ytid}}/sddefault.jpg">
     </a>
-  {% endif %}
+  {% endif %} 
+  </div>
 {% endfor %}
