Changed how PDF viewing works

--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@ title: Times New Roman
 
 <p></p>
 
-<h2>View our most recent issue, <a href="{{recentissue.url}}">{{ recentissue.title }}</a>:</h2>
-    <div class="recent-issue-thumbnail-contents-container">
-        <div class="recent-issue-thumbnail">
-            {% include issue_large_thumbnail.html issue=recentissue %}
-        </div>
-        <div class="recent-issue-contents">
-            {% include articles_in_issue.html issue=recentissue %}
-        </div>
-        
-    </div>
+<h2>Our most recent issue, <a href="{{recentissue.url}}">{{ recentissue.title }}</a>:</h2>
+   <p>{{recentissue.excerpt}}</p>
+   {% include issue_detail.html issue=recentissue %}
 <hr>
 
 <h2>Recent posts</h2>
