--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Times New Roman
 <div class="recentpost">
     <h2 class="articletitle"><a href="{{post.url}}">{{ post.title }}</a></h2>
 
-    {% include articleinfo.html %}
+    {% include article_info.html %}
 
     {{ post.excerpt | markdownify }}
 
