Added new videos

--- a/videos.html
+++ b/videos.html
@@ -6,7 +6,7 @@ title: Videos
   <div class="video-container">
  
   <h2>{{vid.title}}</h2>
-  {% if forloop.index <= 3 %}
+  {% if forloop.index <= 4 %}
     <div class="video-embed-container">
       <iframe class="video-embed" src="https://www.youtube.com/embed/{{vid.ytid}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
@@ -15,5 +15,10 @@ title: Videos
         <img class="video-thumbnail" width="100%" src="https://img.youtube.com/vi/{{vid.ytid}}/sddefault.jpg">
     </a>
   {% endif %} 
+
+  {% if vid.btsid %}
+    (<a href="https://www.youtube.com/watch?v={{vid.btsid}}">Behind the scenes</a>)
+  {% endif %}
+
   </div>
 {% endfor %}
