Added video awards

--- a/videos.html
+++ b/videos.html
@@ -6,6 +6,11 @@ title: Videos
   <div class="video-container">
  
   <h2>{{vid.title}}</h2>
+  {% if vid.honors %}
+  {% for honor in vid.honors %}
+  <p>{{honor.venue}} - {{honor.award}}</p>
+  {% endfor %}
+  {% endif %}
   {% if forloop.index <= 4 %}
     <div class="video-embed-container">
       <iframe class="video-embed" src="https://www.youtube.com/embed/{{vid.ytid}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
