Mobile title and fix margins

--- a/staff.html
+++ b/staff.html
@@ -1,6 +1,6 @@
 ---
 title: Staff
-layout: base
+layout: base-mobile-title
 ---
 
 {% assign eboard = site.staff | where: "group", "eboard" | sort: "positionnumber"  %}
