Founders => re-founders

--- a/staff.html
+++ b/staff.html
@@ -25,7 +25,7 @@ layout: base-mobile-title
     </div>
 <hr />
 
-<h3 class="other-staff-container">Meet Our Founders</h3>
+<h3 class="other-staff-container">Meet Our Re-Founders</h3>
     <div class="other-staff-faces-container">
     {% for staff in founders %}
         {% include staff_box.html staff=staff %}
